--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -1,6 +1,7 @@
 /* wrap */
 .wrap {
   width: 100vw;
+  height: 100vh;
   position: relative;
   overflow: hidden;
   min-width: 320px;
@@ -8,21 +9,20 @@
 
 /* header */
 .header {
-  position: absolute;
-  top: 0;
+  position: relative;
   height: 8vh;
   width: 100%;
-  z-index: 1;
-  background-color: #000;
 }
 .header-inner {
-  position: relative;
+  position: fixed;
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 8vh;
   margin: 0 auto;
   padding: 0 10%;
   text-align: center;
+  z-index: 10000;
+  background-color: #000;
 }
 .logo {
   position: relative;
@@ -53,54 +53,133 @@ nav.menu {
   position: relative;
   display: block;
   line-height: 8vh;
-  font-size: 15px;
-  padding: 0 15px;
+  font-size: 1.2rem;
+  padding: 0 1rem;
   letter-spacing: -0.25px;
   font-weight: 600;
-}
-.manu ul li a span {
   transition: color 0.3s ease;
 }
-.menu ul li a:hover span {
+.menu ul li a:hover {
   color: #80dfff; /* 밝은 네온블루 */
 }
 .contact a span {
-  border-bottom: 2px solid #00bfff;
-}
-.contact a:hover span {
-  border-bottom: 2px solid #80dfff;
+  border-bottom: 2px solid;
 }
 
 /* main */
 .main {
   position: relative;
-  height: 100vh;
-  overflow-y: auto;
+  display: flex;
   width: 100vw;
-  object-fit: cover;
-  margin: 0;
-  background-color: #000;
+  height: 84vh;
+  margin: 0 auto;
 }
-
+.profile {
+  position: relative;
+}
+.main div > img {
+  position: absolute;
+  top: 50%;
+  left: 5vw;
+  width: 25vw;
+  height: 25vw;
+  transform: translateY(-50%);
+  z-index: 999;
+  border-radius: 50%; /* 원형으로 만드는 속성 */
+  object-fit: cover; /* 이미지가 잘리지 않게 조정 */
+}
+.section {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.article {
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+}
+/* contact-me */
+.contact-me ul li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.contact-me ul li span {
+  margin-left: 1rem;
+}
 /* footer */
 .footer {
-  position: absolute;
+  position: relative;
   width: 100%;
   height: 8vh;
-  bottom: 0;
-  z-index: 1;
-  background-color: #000;
 }
 .footer div {
   display: flex;
+  position: relative;
   width: 100%;
   height: 100%;
   justify-content: center;
   align-items: center;
 }
 .footer p {
-  font-size: 0.9em;
+  font-size: 1rem;
   font-weight: 400;
   font-family: "Arial";
   text-align: center;
+}
+.footer div .credit {
+  position: absolute;
+  display: flex;
+  justify-content: flex-end;
+  font-size: 1rem;
+  color: #fff;
+  padding-right: 2rem;
+}
+.credit a {
+  display: flex;
+  font-size: 0.7rem;
+  color: #fff;
+  margin-left: 1rem;
+}
+
+/* 반응형을 위한 미디어쿼리 작성 */
+/* 1200 이하 */
+@media screen and (max-width: 1200px) {
+  .logo a span {
+    font-size: 2rem;
+  }
+  .menu ul li a {
+    font-size: 0.9rem;
+  }
+  .footer p {
+    font-size: 0.9rem;
+  }
+}
+
+/* 반응형을 위한 미디어쿼리 작성 */
+/* 1200 이하 */
+@media screen and (max-width: 1200px) {
+  .logo a span {
+    font-size: 2rem;
+  }
+  .menu ul li a {
+    font-size: 1.1rem;
+  }
+  .footer p {
+    font-size: 0.9rem;
+  }
+}
+
+/* 540 이하 (모바일) */
+@media screen and (max-width: 540px) {
+  .logo a span {
+    font-size: 1.5rem;
+  }
+  .menu ul li a {
+    font-size: 1rem;
+  }
+  .footer p {
+    font-size: 0.675rem;
+  }
 }
