--- a/public/css/home.css
+++ b/public/css/home.css
@@ -10,9 +10,8 @@
 .header {
   position: absolute;
   top: 0;
-  height: 8vh;
-  width: 100vw;
-  padding: 0 10%;
+  height: 8%;
+  width: 100%;
   background-color: black;
   z-index: 1;
 }
@@ -22,14 +21,15 @@
   width: 100%;
   height: 100%;
   margin: 0 auto;
+  padding: 0 10%;
   text-align: center;
 }
 .logo {
-  position: absolute;
-  left: 0;
-  margin: 0;
+  position: relative;
   display: inline-block;
+  width: 10vw;
   line-height: 8vh;
+  margin: 0 auto;
 }
 .logo a span {
   font-size: 2.2rem;
@@ -37,9 +37,9 @@
 }
 
 nav.menu {
-  position: absolute;
-  right: 0;
+  position: relative;
   display: flex;
+  width: 70vw;
   justify-content: flex-end;
 }
 .menu ul {
@@ -53,7 +53,7 @@ nav.menu {
   position: relative;
   display: block;
   line-height: 8vh;
-  font-size: 1rem;
+  font-size: 1.2rem;
   padding: 0 1rem;
   letter-spacing: -0.25px;
   font-weight: 600;
@@ -79,7 +79,7 @@ nav.menu {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   width: 100%;
   height: 130%;
 }
@@ -107,18 +107,18 @@ nav.menu {
   text-align: center;
 }
 
-/* 해상도별 로고,메뉴 크기 조절하기 */
-/* 950 이하 */
-@media screen and (max-width: 950px) {
-.logo a span{
-  font-size: 1.75rem;
-}
-.menu ul li a{
-  font-size: 0.8rem;
-}
-.footer p{
-  font-size: 0.7rem;
-}
+/* 반응형을 위한 미디어쿼리 작성 */
+/* 1200 이하 */
+@media screen and (max-width: 1200px) {
+  .logo a span {
+    font-size: 2rem;
+  }
+  .menu ul li a {
+    font-size: 0.9rem;
+  }
+  .footer p {
+    font-size: 0.9rem;
+  }
 }
 
 /* 반응형을 위한 미디어쿼리 작성 */
@@ -127,23 +127,23 @@ nav.menu {
   .logo a span {
     font-size: 2rem;
   }
-  .menu ul li a{
-    font-size: 0.9rem;
+  .menu ul li a {
+    font-size: 1.1rem;
   }
-    .footer p{
+  .footer p {
     font-size: 0.9rem;
   }
 }
 
-/* 540 이하 */
+/* 540 이하 (모바일) */
 @media screen and (max-width: 540px) {
   .logo a span {
     font-size: 1.5rem;
   }
-  .menu ul li a{
-    font-size: 0.675rem;
+  .menu ul li a {
+    font-size: 1rem;
   }
-    .footer p{
+  .footer p {
     font-size: 0.675rem;
   }
 }
