--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -103,20 +103,30 @@ nav.menu {
 section {
   height: 84vh; /* 각 섹션을 전체 화면 높이로 설정 */
   padding: 20px;
-  background-color: #888;
+  /* background-color: #666; */
   margin-bottom: 20px;
-  color: #333;
+  color: #99e5ff;
 }
 
 article {
   width: 100%;
   height: 100%;
 }
-article p {
-  display: block;
-  font-family: "arial", sans-serif;
-  font-size: 1rem;
-  line-height: 1.3rem;
+.contact-me h1,
+.about-me h1,
+.used-tools h1 {
+  color: #00bfff; /* 기본 네온 블루 */
+  font-size: 2.5rem;
+  font-weight: 600;
+  border-bottom: 2px solid #00bfff; /* 밑줄 효과 */
+  display: inline-block;
+  margin-bottom: 1rem;
+}
+.contact-me span,
+.about-me p {
+  color: #80dfff;
+  font-size: 1.2rem;
+  line-height: 1.8rem;
 }
 article ul {
   display: flex;
@@ -130,8 +140,19 @@ article ul li {
   line-height: 1rem;
   gap: 0.5vw;
 }
-article ul li i {
-  line-height: 1rem;
+.contact-list li i {
+  color: #00bfff;
+  font-size: 1.5rem;
+  margin-right: 0.5rem;
+}
+
+.contact-list li span {
+  color: #80dfff;
+  font-size: 1.2rem;
+}
+
+.contact-list li:hover span {
+  color: #99e5ff;
 }
 article ul li img {
   width: 4vw;
@@ -174,7 +195,9 @@ article ul li img {
   white-space: nowrap; /* 텍스트를 한 줄로 유지 */
   overflow: hidden; /* 넘친 텍스트 숨기기 */
 }
-
+.credit a:hover {
+  color: #666;
+}
 /* 반응형을 위한 미디어쿼리 작성 */
 /* 1200 이하 */
 @media screen and (max-width: 1200px) {
