--- a/public/css/work.css
+++ b/public/css/work.css
@@ -120,8 +120,10 @@ nav.menu {
   height: 100%;
   text-align: center;
   padding: 1.4rem;
+  cursor: pointer;
   /* transition: transform 0.5s ease, opacity 0.5s ease; */
 }
+/* 트랜지션 추가할 시 레이아웃 정렬과 충돌하여 삭제 */
 /* .section article:hover div {
   transform: scale(1.05);
 } */
