인터뷰 숏폼 인트로 수정, 인덱스html->워크html리디렉션

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -147,3 +147,9 @@ nav.menu {
     font-size: 0.675rem;
   }
 }
+
+/* 배경영상 공사중 */
+/* home.css나 global.css 가장 아래에 추가 */
+.video-background-container {
+  display: none;
+}
