배경다시살림

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -150,6 +150,6 @@ nav.menu {
 
 /* 배경영상 공사중 */
 /* home.css나 global.css 가장 아래에 추가 */
-.video-background-container {
+/* .video-background-container {
   display: none;
-}
+} */
